Bug 457528 - No placeholder when no entries for a given mimetype found
Summary: No placeholder when no entries for a given mimetype found
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-08-05 14:54 UTC by Nicolas Fella
Modified: 2022-08-08 21:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-08-05 14:54:12 UTC
STEPS TO REPRODUCE
1. Run something like "plasma-discover --mime image/astc" 

OBSERVED RESULT
Discover searches for a while and then shows an empty list

EXPECTED RESULT
There should be a placeholder saying something like "Nothing found"

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15.5

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-08-08 20:33:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/347
Comment 2 Bug Janitor Service 2022-08-08 20:33:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/347
Comment 3 Nate Graham 2022-08-08 21:33:11 UTC
Git commit 31fd4a4db304188deb351ae59e4c2765280562bb by Nate Graham.
Committed on 08/08/2022 at 20:29.
Pushed by ngraham into branch 'master'.

Use correct variable to denote that ResourcesModel is done initializing

Due to somewhat confusing variable naming, we were accidentally setting
m_initializingBackends to false, when that variable actually holds the
number of backends that are still initializing. Instead we need to set
m_isInitializing to false.

This fixes a bug where the placeholder message for the MIME type screen
would fail to appear as expected, because one of the conditions in its
opacity property was `!ResourcesModel.isInitializing` and that was never
getting set to false.
FIXED-IN: 5.24.7

M  +1    -1    libdiscover/resources/ResourcesModel.cpp

https://invent.kde.org/plasma/discover/commit/31fd4a4db304188deb351ae59e4c2765280562bb